--- a/src/components/WhyAreWe/Title/Title.module.css
+++ b/src/components/WhyAreWe/Title/Title.module.css
@@ -1,7 +1,8 @@
 .title {
-	font-size: 40px;
+	font-size: 46px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 105px;
+	font-weight: 400;
 }
