--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,10 +9,6 @@
 	text-decoration: none;
 }
 
-a:focus {
-	outline: none;
-}
-
 html, body {
 	height: 100%;
 	scroll-behavior: smooth;
@@ -23,8 +19,24 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 0;
 }
 
+a:focus {
+	outline: none;
+}
 
-.fa {
+ul li,
+ol li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	line-height: 0;
+}
+
+.fa-times {
+	font-size: 26px;
+	opacity: .8;
+}
+
+.fa-angle-down {
 	animation-duration: 1.6s;
 	animation-iteration-count: infinite;
 	animation-name: arrowAnimation;
