--- a/src/components/WhyAreWe/WhyAreWeIcons/WhyAreWeIcons.module.css
+++ b/src/components/WhyAreWe/WhyAreWeIcons/WhyAreWeIcons.module.css
@@ -1,5 +1,12 @@
 .items {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+}
+
+@media(max-width:767px) {
+	.items {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
