--- a/src/components/Feedback/FeedbackInstagram/FeedbackInstagram.module.css
+++ b/src/components/Feedback/FeedbackInstagram/FeedbackInstagram.module.css
@@ -2,7 +2,7 @@
 	font-size: 42px;
 	text-align: center;
 	background-color: #f5f2ed;
-	padding: 60px 0 75px 0;
+	padding: 60px 0 60px 0;
 }
 
 .text {
@@ -21,4 +21,18 @@
 	-webkit-background-clip: text;
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+
+@media(max-width:650px) {
+
+	.text, .instLink {
+		font-size: 36px;
+	}
+}
+
+@media(max-width:426px) {
+
+	.text, .instLink {
+		font-size: 26px;
+	}
 }
