--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,19 @@
 .footer {
 	padding: 20px;
-	border-top: 1px solid #d5d5d5;
 }
 
 .wrapper {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+@media(max-width:767px) {
+	.footer {
+		padding: 40px 0;
+	}
+
+	.wrapper {
+		flex-direction: column;
+	}
 }
