--- a/src/components/Header/Email/Email.module.css
+++ b/src/components/Header/Email/Email.module.css
@@ -2,3 +2,21 @@
 	color: #fff;
 	font-size: 40px;
 }
+
+@media(max-width:955px) {
+	.link {
+		margin-bottom: 28px;
+	}
+}
+
+@media(max-width:650px) {
+	.link {
+		font-size: 30px;
+	}
+}
+
+@media(max-width:500px) {
+	.link {
+		font-size: 26px;
+	}
+}
