--- a/src/components/Header/HeaderTitle/HeaderTitle.module.css
+++ b/src/components/Header/HeaderTitle/HeaderTitle.module.css
@@ -6,3 +6,27 @@
 	text-transform: uppercase;
 	margin-bottom: 15px;
 }
+
+@media(max-width:1130px) {
+	.title {
+		font-size: 100px;
+	}
+}
+
+@media(max-width:955px) {
+	.title {
+		font-size: 70px;
+	}
+}
+
+@media(max-width:650px) {
+	.title {
+		font-size: 50px;
+	}
+}
+
+@media(max-width:500px) {
+	.title {
+		font-size: 40px;
+	}
+}
