--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,3 +1,17 @@
 .main {
 	padding-top: 100px;
 }
+
+@media(max-width:1130px) {
+	.main {
+		padding-top: 80px;
+	}
+}
+
+
+
+@media(max-width:650px) {
+	.main {
+		padding-top: 60px;
+	}
+}
