--- a/src/components/Ordering/OrderingDescription/OrderingDescription.module.css
+++ b/src/components/Ordering/OrderingDescription/OrderingDescription.module.css
@@ -6,3 +6,15 @@
 	min-height: 100%;
 	padding: 50px 25px 50px 100px;
 }
+
+@media(max-width:650px) {
+	.description {
+		padding: 50px 25px 50px 50px;
+	}
+}
+
+@media(max-width:426px) {
+	.description {
+		padding: 30px 20px;
+	}
+}
