--- a/src/components/Shops/Card/Card.module.css
+++ b/src/components/Shops/Card/Card.module.css
@@ -1,6 +1,8 @@
 .card {
-	width: 33.33%;
+	width: calc(33.33% - 15px);
 	text-align: center;
+	overflow: hidden;
+	margin-bottom: 100px;
 }
 
 .container {
@@ -10,15 +12,15 @@
 	align-items: center;
 	max-width: 350px;
 	margin: 0 auto;
-
 	overflow: hidden;
 }
 
 .imageContainer {
-	width: 350px;
+	width: 100%;
 	height: 360px;
 	margin-bottom: 40px;
-	overflow: hidden;
+	position: relative;
+	padding: 0 0 58% 0;
 }
 
 .imageContainer img {
@@ -26,14 +28,42 @@
 	height: 100%;
 	object-fit: cover;
 	border-radius: 15px;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .description {
 	color: #949494;
 	font-size: 24px;
-	margin-bottom: 100px;
 }
 
 .description::first-letter {
 	text-transform: uppercase;
+}
+
+@media(max-width:1180px) {
+
+	.card {
+		margin-bottom: 50px;
+	}
+}
+
+@media(max-width:1020px) {
+	.card {
+		width: calc(50% - 15px);
+	}
+}
+
+@media(max-width:650px) {
+	.card {
+		width: 100%;
+		margin-bottom: 25px;
+		border-bottom: solid 1px #949494;
+	}
+
+	.description {
+		margin-bottom: 25px;
+	}
+
 }
