--- a/src/components/Feedback/FeedbackEmail/FeedbackEmail.module.css
+++ b/src/components/Feedback/FeedbackEmail/FeedbackEmail.module.css
@@ -19,14 +19,25 @@
 	}
 }
 
+@media(max-width:457px) {
+	.text {
+		font-size: 22px;
+	}
+
+	.emailLink {
+		color: #ff8562;
+		font-size: 20px;
+	}
+}
+
 @media(max-width:426px) {
 	.text {
-		font-size: 16px;
+		font-size: 17px;
 		margin: 0 auto 20px;
 	}
 
 	.emailLink {
 		color: #ff8562;
-		font-size: 16px;
+		font-size: 17px;
 	}
 }
